# lunas

./: .gitignore  CLAUDE.md  README.md  roadmap.yml
crates/: Cargo.toml
crates/lunas_compiler/: Cargo.toml  build.rs
crates/lunas_compiler/docs/: for-diff-design.md  output-design.md
crates/lunas_compiler/examples/: resolve_demo.rs
crates/lunas_compiler/src/: lib.rs  model.rs  reactivity.rs
crates/lunas_compiler/src/codegen/: emit.rs  mod.rs  skeleton.rs
crates/lunas_compiler/tests/: browser_smoke.rs  codegen_app.rs  codegen_emit.rs  codegen_exec.rs  codegen_skeleton.rs  codegen_snapshot.rs  deps_matrix.rs  emit_matrix.rs  reactivity.rs  resolve.rs  resolve_edge.rs  robustness.rs  runtime_samples.rs  scaffold_template.rs
crates/lunas_compiler/tests/browser/: serve.mjs
crates/lunas_compiler/tests/fixtures/: Notice.lunas  Panel.lunas  README.md  class_style.lunas  dynamic_teleport.lunas  for_keyed_nested.lunas  if_cascade.lunas  multi_root.lunas  ref_html.lunas  text_attr_event.lunas  two_way.lunas
crates/lunas_compiler/tests/fixtures/app/: App.lunas  Badge.lunas  Card.lunas  Counter.lunas
crates/lunas_compiler/tests/runtime/: README.md
crates/lunas_compiler/tests/runtime/harness/: kit.mjs  normalize.mjs  run-samples.mjs
crates/lunas_compiler/tests/runtime/samples/attr/attr_vs_prop_value_and_href/: App.lunas  expected.after.html  steps.mjs
crates/lunas_compiler/tests/runtime/samples/attr/bool_checked_false/: App.lunas  steps.mjs
crates/lunas_compiler/tests/runtime/samples/attr/bool_checked_toggle/: App.lunas  steps.mjs
crates/lunas_compiler/tests/runtime/samples/attr/bool_checked_true/: App.lunas  expected.after.html  steps.mjs
crates/lunas_compiler/tests/runtime/samples/attr/bool_disabled_empty_string/: App.lunas
crates/lunas_compiler/tests/runtime/samples/attr/bool_disabled_false/: App.lunas
crates/lunas_compiler/tests/runtime/samples/attr/bool_disabled_nonempty_string/: App.lunas
crates/lunas_compiler/tests/runtime/samples/attr/bool_disabled_one/: App.lunas
crates/lunas_compiler/tests/runtime/samples/attr/bool_disabled_toggle/: App.lunas  expected.after.html  steps.mjs
crates/lunas_compiler/tests/runtime/samples/attr/bool_disabled_true/: App.lunas  steps.mjs
crates/lunas_compiler/tests/runtime/samples/attr/bool_disabled_zero/: App.lunas  expected.after.html
crates/lunas_compiler/tests/runtime/samples/attr/bool_hidden_true/: App.lunas  expected.after.html  steps.mjs
crates/lunas_compiler/tests/runtime/samples/attr/bool_multiple_attrs_combo/: App.lunas  steps.mjs
crates/lunas_compiler/tests/runtime/samples/attr/bool_multiple_true/: App.lunas  steps.mjs
crates/lunas_compiler/tests/runtime/samples/attr/bool_open_false/: App.lunas
crates/lunas_compiler/tests/runtime/samples/attr/bool_open_true/: App.lunas  expected.html
crates/lunas_compiler/tests/runtime/samples/attr/bool_readonly_true/: App.lunas  steps.mjs
crates/lunas_compiler/tests/runtime/samples/attr/bool_required_false/: App.lunas
crates/lunas_compiler/tests/runtime/samples/attr/bool_required_true/: App.lunas  expected.html
crates/lunas_compiler/tests/runtime/samples/attr/bool_selected_true/: App.lunas  expected.after.html  steps.mjs
crates/lunas_compiler/tests/snapshots/: app_App.js  app_Badge.js  app_Card.js  app_Counter.js  class_style.js  dynamic_teleport.js  for_keyed_nested.js  if_cascade.js  multi_root.js  ref_html.js  text_attr_event.js  two_way.js
crates/lunas_parser/: Cargo.toml  DESIGN.md
crates/lunas_parser/docs/: CAPABILITIES.md  ROADMAP.md  STATUS.md  template-design.md
crates/lunas_parser/examples/: check.rs  lsp_demo.rs  parse_demo.rs  reactivity_demo.rs
crates/lunas_parser/src/: for_parser.rs  ir.rs  lib.rs  lower.rs  parser1.rs  swc_parser.rs  tests.rs  ts_to_js.rs
crates/lunas_parser/src/grammar/: lunas.pest
crates/lunas_parser/src/template/: ir.rs  mod.rs  scan.rs
crates/lunas_parser/tests/: directives_edge.rs  fixtures.rs  fuzz_extra.rs  handoff.rs  integration.rs  interpolation.rs  robustness.rs  template.rs  template_edge.rs
crates/lunas_parser/tests/fixtures/: counter-game.lun  pass-value.lun  todo.lunas
crates/lunas_script/: Cargo.toml
crates/lunas_script/src/: analysis.rs  ast.rs  for_header.rs  lib.rs  transform.rs
crates/lunas_script/tests/: analysis.rs  ast.rs  deps.rs  for_header.rs  for_header_ext.rs  fuzz.rs  mutations.rs  robustness.rs  scoping.rs  spans.rs  transform.rs  ts_transform.rs
crates/lunas_span/: Cargo.toml
crates/lunas_span/src/: diagnostic.rs  lib.rs  line_index.rs  text_size.rs
crates/lunas_wasm/: .gitignore  Cargo.toml  README.md
crates/lunas_wasm/src/: lib.rs
(+3010 files in other folders)
