[package]
name = "lunas_parser"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Parser for the Lunas single-file-component (.lunas) format"
repository = "https://github.com/lunasrun/lunas"

[dependencies]
lunas_span = { path = "../lunas_span" }
lunas_html_parser = { path = "../lunas_html_parser" }
serde = { version = "1", features = ["derive"] }
thiserror = "=2.0.12"
pest = "=2.8.0"
pest_derive = "=2.8.0"

[dev-dependencies]
serde_json = "1"
