[package]
name = "lunas_span"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Shared span and diagnostic primitives for the Lunas parser crates"
repository = "https://github.com/lunasrun/lunas"

[dependencies]
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
serde_json = "1"
